fix: prevents the modal from overlapping its child elements

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -244,7 +244,7 @@ div.math {
 }
 
 .modal-mask {
-  z-index: 9999;
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
